tests/language_modules/08_routines/valid/function_returns_string.vf
module FunctionReturnsString

function label() returns String
is
    return "ready"
end label

end FunctionReturnsString