tests/language_modules/08_routines/invalid_semantics/routine_end_name_mismatch.vf
module RoutineEndNameMismatch

function read() returns Integer
is
    return 1
end write

end RoutineEndNameMismatch